--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,10 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=3307
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=laraveluser
+DB_PASSWORD=laravel_db_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -44,3 +44,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_USER=admin
+API_PASS=admin
+API_HOST=172.17.0.1
+API_PORT=9001
